--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -3,33 +3,26 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][ImGui Demo]
-Pos=671,10
-Size=550,680
+[Window][Dear ImGui Demo]
+Pos=0,19
+Size=213,359
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][Test]
+Pos=0,380
+Size=213,340
+Collapsed=0
+DockId=0x00000003,0
+
+[Window][DockSpace Demo]
+Pos=0,0
+Size=1280,720
 Collapsed=0
 
-[Window][Example: Simple layout]
-Pos=60,60
-Size=500,440
-Collapsed=0
-
-[Window][ImGui Metrics]
-Pos=60,60
-Size=402,251
-Collapsed=0
-
-[Window][Example: Auto-resizing window]
-Pos=148,67
-Size=449,284
-Collapsed=0
-
-[Window][About Dear ImGui]
-Pos=60,60
-Size=568,109
-Collapsed=0
-
-[Window][Style Editor]
-Pos=219,11
-Size=352,714
-Collapsed=0
+[Docking][Data]
+DockNode    ID=0x00000001 Pos=78,59 Size=213,701 Split=Y
+  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=213,359 Selected=0xE927CF2F
+  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=213,340 Selected=0x784DD132
+DockSpace   ID=0x3BC79352 Window=0x4647B76E Pos=78,59 Size=1280,701 CentralNode=1
 
