--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -5,7 +5,7 @@ Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=0,19
-Size=213,359
+Size=213,701
 Collapsed=0
 DockId=0x00000002,0
 
@@ -16,13 +16,16 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][DockSpace Demo]
-Pos=0,0
 Size=1280,720
+Collapsed=0
+
+[Window][Settings]
+Pos=60,60
+Size=124,54
 Collapsed=0
 
 [Docking][Data]
 DockNode    ID=0x00000001 Pos=78,59 Size=213,701 Split=Y
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=213,359 Selected=0xE927CF2F
   DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=213,340 Selected=0x784DD132
-DockSpace   ID=0x3BC79352 Window=0x4647B76E Pos=78,59 Size=1280,701 CentralNode=1
 
