Added Some Resizing Support.

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -1,10 +1,11 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=60,97
 Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,19
+ViewportPos=1089,161
+ViewportId=0xA4D966FE
 Size=213,701
 Collapsed=0
 DockId=0x00000002,0
@@ -21,11 +22,11 @@ Collapsed=0
 
 [Window][Settings]
 Pos=60,60
-Size=124,54
+Size=207,111
 Collapsed=0
 
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=78,59 Size=213,701 Split=Y
+DockNode    ID=0x00000001 Pos=1089,161 Size=213,701 Split=Y
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=213,359 Selected=0xE927CF2F
   DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=213,340 Selected=0x784DD132
 
