--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -15,8 +15,7 @@ Size=550,680
 Collapsed=0
 
 [Window][Settings]
-ViewportPos=1065,374
-ViewportId=0x1C33C293
+Pos=51,30
 Size=297,213
 Collapsed=0
 
