--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -15,10 +15,9 @@ Size=550,680
 Collapsed=0
 
 [Window][Settings]
-Pos=642,19
-Size=638,701
+Pos=4,5
+Size=284,348
 Collapsed=0
-DockId=0x00000004,0
 
 [Window][Dear ImGui Demo]
 Pos=0,19
@@ -27,20 +26,17 @@ Collapsed=0
 DockId=0x00000001,0
 
 [Window][DockSpace Demo]
-Pos=0,0
 Size=1280,720
 Collapsed=0
 
 [Window][Viewport]
-Pos=0,19
-Size=640,701
+ViewportPos=-14,134
+ViewportId=0x995B0CF8
+Size=1280,351
 Collapsed=0
-DockId=0x00000002,0
 
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=60,59 Size=1280,701 Split=X
-  DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=640,701 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=549,701 Selected=0xE927CF2F
-    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=729,701 CentralNode=1 Selected=0x995B0CF8
-  DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=638,701 Selected=0x1C33C293
+DockSpace   ID=0x3BC79352 Pos=78,59 Size=1280,701 Split=X
+  DockNode  ID=0x00000001 Parent=0x3BC79352 SizeRef=549,701 Selected=0xE927CF2F
+  DockNode  ID=0x00000002 Parent=0x3BC79352 SizeRef=729,701 CentralNode=1 HiddenTabBar=1 Selected=0x995B0CF8
 
